--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -7,7 +7,7 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     
-    <title>Vite + React</title>
+    <title>Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
